<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>project</name>
  <version>0.0.0</version>
  <description>TODO: Package description</description>
  <maintainer email="TODO@gmail.com" ></maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Beginning of edits to package.xml -->
  
  <depend>rclcpp</depend>
  <depend>std_msgs</depend>
  <depend>sensr_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>turtlesim</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>rcl_interfaces</depend>
  <depend>nav_msgs</depend>
  <depend>nav2_msgs</depend>
  
  <!-- End of edits to package.xml -->

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
